# py-ntfs-quick-index

./: .gitignore  README.md  pyproject.toml
scripts/: build_gui_exe.bat  pnqi_gui_entry.py
src/pnqi/: __init__.py  admin.py  cli.py  db.py  diagnostics.py  errors.py  formatting.py  gui.py  indexer.py  lock.py  pathing.py  platform.py  progress.py  winapi.py
tests/: test_formatting_pathing.py
